<resources>
    <string name="app_name">Shoe Store</string>

    <!-- Screen Labels -->
    <string name="label_fragment_login">Login</string>
    <string name="label_fragment_welcome">Welcome</string>
    <string name="label_fragment_instruction">Instructions</string>
    <string name="label_fragment_shoe_list">Shoes List</string>
    <string name="label_fragment_shoe_detail">Add Shoe</string>

    <!-- Common -->
    <string name="welcome">"Welcome"</string>
    <string name="cancel">Cancel</string>

    <!-- Login Fragment -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Welcome Fragment -->
    <string name="shoe_store">Shoe Store</string>
    <string name="welcome_username">Welcome, %1$s</string>
    <string name="prompt_continue">Continue</string>

    <!-- Instruction Fragment -->
    <string name="instructions_text">Welcome to our shoe store app. Continue on to the next screen to view list of the products</string>

    <!-- Shoe List Fragment -->
    <string name="action_add">add</string>
    <string name="action_logout">Logout</string>

    <!-- Shoe Detail Fragment -->
    <string name="label_name">Name</string>
    <string name="label_company">Company</string>
    <string name="label_size">Size</string>
    <string name="label_description">Description</string>
    <string name="prompt_save">Save</string>

</resources>
