<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.onboarding.LoginFragment"
        android:label="@string/label_fragment_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.onboarding.WelcomeFragment"
        android:label="@string/label_fragment_welcome"
        tools:layout="@layout/fragment_welcome">

        <argument
            android:name="username"
            app:argType="string" />

        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.ui.onboarding.InstructionFragment"
        android:label="@string/label_fragment_instruction"
        tools:layout="@layout/fragment_instruction">

        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/instructionFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ui.shoes.ShoeListFragment"
        android:label="@string/label_fragment_shoe_list"
        tools:layout="@layout/fragment_shoe_list">

        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.ui.shoes.ShoeDetailFragment"
        android:label="@string/label_fragment_shoe_detail"
        tools:layout="@layout/fragment_shoe_detail" />

</navigation>